@@ -1,3 +1,8 @@
+2001-04-03  Alexander Larsson  <alexl@redhat.com>
+
+	* gdk/linux-fb/gdkevents-fb.c:
+	Add empty gdk_setting_get().
+
 Tue Apr  3 05:09:07 2001  Tim Janik  <timj@gtk.org>
 
 	* gtk/gtkmain.c (_gtk_boolean_handled_accumulator): use more elaborate
